<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:onClick="onRefresh"
        android:text="@string/refreshButton" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onNew"
        android:text="@string/newButton" />

    <EditText
        android:id="@+id/firstnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newButton"
        android:layout_marginLeft="109dp"
        android:layout_marginStart="109dp"
        android:layout_toEndOf="@+id/newButton"
        android:layout_toRightOf="@+id/newButton"
        android:ems="10"
        android:hint="@string/firstnameString"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/firstnameText"
        android:layout_alignBottom="@+id/firstnameText"
        android:layout_marginLeft="122dp"
        android:layout_marginStart="122dp"
        android:layout_toEndOf="@+id/firstnameText"
        android:layout_toRightOf="@+id/firstnameText"
        android:ems="10"
        android:hint="@string/lastnameString"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/birthdateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/refreshButton"
        android:layout_alignLeft="@+id/firstnameText"
        android:layout_alignStart="@+id/firstnameText"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/birthdateString"
        android:inputType="date" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/birthdateText"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_toEndOf="@+id/lastnameText"
        android:layout_toRightOf="@+id/lastnameText"
        android:onClick="onSave"
        android:text="@string/saveButton" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>